test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/bitwise_operation_on_string.plx
#  Can't apply bitwise operations to strings
pub fn main(none) i32 {
    "My string" & 100
    return 0
}
